unpackaged/main/default/objects/User/fields/Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature__c</fullName>
    <description>Email Signature used for sending email. Added in the Email Signature in Email setting of User.</description>
    <label>Email Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>