unpackaged/main/default/objects/User/fields/Spiff_User__c.field-meta.xml
<CustomField>
    <fullName>Spiff_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A new checkbox style field called &quot;Spiff User&quot;.  This will allow Spiff to look for this field and know which users are commission based.</description>
    <label>Spiff User</label>
    <type>Checkbox</type>
</CustomField>