unpackaged/main/default/objects/User/fields/Varcom_Name__c.field-meta.xml
<CustomField>
    <fullName>Varcom_Name__c</fullName>
    <label>Varcom Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>