unpackaged/main/default/objects/User/listViews/Clutch_Accounting_Users.listView-meta.xml
<ListView>
    <fullName>Clutch_Accounting_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Clutch Accounting User</value>
    </filters>
    <label>Clutch Accounting Users</label>
</ListView>